appId: dev.noboil.org
---
- runFlow: onboarding-flow.yaml
- assertVisible: "Projects"
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "New Project"
    timeout: 10000
- tapOn: "Project Name"
- inputText: "Delete Test Project"
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Delete Test Project"
    timeout: 10000
- tapOn: "Delete Test Project"
- waitForAnimationToEnd
- assertVisible:
    text: "Tasks"
    optional: true
- back
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Delete Test Project"
    timeout: 10000
