appId: dev.noboil.org
---
- runFlow: onboarding-flow.yaml
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- tapOn: "Project Name"
- inputText: "Assignment Project"
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Assignment Project"
    timeout: 10000
- tapOn: "Assignment Project"
- waitForAnimationToEnd
- assertVisible: "Tasks"
- assertVisible: "New task..."
- tapOn: "New task..."
- inputText: "Task to assign"
- tapOn:
    id: "addTaskButton"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Task to assign"
    timeout: 10000
- hideKeyboard
- back
- extendedWaitUntil:
    visible: "Projects"
    timeout: 10000
- assertVisible: "Assignment Project"
