appId: dev.noboil.org
---
- runFlow: onboarding-flow.yaml
- assertVisible: "Projects"
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "New Project"
    timeout: 10000
- tapOn: "Project Name"
- inputText: "Task Toggle Project"
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Task Toggle Project"
    timeout: 10000
- tapOn: "Task Toggle Project"
- waitForAnimationToEnd
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "New Task"
    timeout: 10000
- tapOn: "Task Title"
- inputText: "Toggleable Task"
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Toggleable Task"
    timeout: 10000
- assertVisible: "Toggleable Task"
