appId: dev.noboil.org
---
- runFlow: onboarding-flow.yaml
- tapOn:
    text: "plus"
- waitForAnimationToEnd
- tapOn: "Project Name"
- inputText: "Task Test Project"
- tapOn: "Create"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Task Test Project"
    timeout: 10000
- tapOn: "Task Test Project"
- waitForAnimationToEnd
- assertVisible: "Tasks"
- assertVisible: "New task..."
- tapOn: "New task..."
- inputText: "First test task"
- tapOn:
    id: "addTaskButton"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "First test task"
    timeout: 10000
- tapOn: "New task..."
- inputText: "Second test task"
- tapOn:
    id: "addTaskButton"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Second test task"
    timeout: 10000
- tapOn: "New task..."
- inputText: "Third test task"
- tapOn:
    id: "addTaskButton"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Third test task"
    timeout: 10000
- assertVisible: "First test task"
- assertVisible: "Second test task"
- assertVisible: "Third test task"
- tapOn:
    id: "toggleTask"
    index: 0
- waitForAnimationToEnd
- hideKeyboard
- back
- extendedWaitUntil:
    visible: "Projects"
    timeout: 10000
- assertVisible: "Task Test Project"
